@@ -8,6 +8,8 @@ from mnemosyne.libmnemosyne.renderers.html_css import HtmlCss
 from mnemosyne.libmnemosyne.filters.html5_media import Html5Media
 from mnemosyne.libmnemosyne.filters.expand_paths import ExpandPaths
 from mnemosyne.libmnemosyne.filters.escape_to_html import EscapeToHtml
+from mnemosyne.libmnemosyne.filters.non_latin_font_size_increase import \
+     NonLatinFontSizeIncrease
 
 
 class DefaultRenderChain(RenderChain):
@@ -20,5 +22,6 @@ class DefaultRenderChain(RenderChain):
 
     id = "default"
 
-    filters = [EscapeToHtml, Latex, ExpandPaths, Html5Media]
+    filters = [EscapeToHtml, Latex, ExpandPaths, Html5Media,
+               NonLatinFontSizeIncrease]
     renderers = [HtmlCss]
