@@ -8,11 +8,14 @@ from mnemosyne.libmnemosyne.filters.html5_media import Html5Media
 from mnemosyne.libmnemosyne.filters.expand_paths import ExpandPaths
 from mnemosyne.webserver.webserver_renderer import WebserverRenderer
 from mnemosyne.libmnemosyne.filters.escape_to_html import EscapeToHtml
+from mnemosyne.libmnemosyne.filters.non_latin_font_size_increase import \
+     NonLatinFontSizeIncrease
 
 
 class WebserverRenderChain(RenderChain):
 
     id = "webserver"
 
-    filters = [EscapeToHtml, Latex, ExpandPaths, Html5Media]
+    filters = [EscapeToHtml, Latex, ExpandPaths, Html5Media,
+               NonLatinFontSizeIncrease]
     renderers = [WebserverRenderer]
